[package]
name = "simple-eth-wallet-gen"
version = "0.1.0-dev"
edition = "2021"
description = "Generate Eth wallet or import from mnemonic"
authors = ["tech@chorus.one"]
publish = false


[[bin]]
path = "main.rs"
name = "simple-eth-wallet-gen"
doc = false # prevent doc generation collisions, see https://github.com/rust-lang/cargo/issues/6313


[dependencies]
rand = { version = "0.8.4", features = ["getrandom"] }
getrandom = "0.2"
eth-keystore = "0.5.0"
libsecp256k1 = "0.7.1"
tiny-bip39 = "1.0.0"
tiny-keccak = {version = "2.0.2",  features = ["sha3", "keccak"] }
tiny-hderive = { git = "ssh://git@github.com/ChorusOne/tiny-hderive.git", rev = "8fe2100d0cc9f492e292f06bbadc6e125ec192ff" }
serde = "1.0.189"
serde_derive = "1.0"
serde_json = "1.0"